# covert

./: .gitignore  Cargo.toml  Dockerfile  LICENCE-MIT  README.md  config.example.toml
.github/workflows/: ci.yml
backend/covert-kv/: Cargo.toml
backend/covert-kv/migrations/: 2022-12-27-init.sql
backend/covert-kv/src/: config.rs  context.rs  create_secret.rs  error.rs  hard_delete_secret.rs  lib.rs  soft_delete_secret.rs
backend/covert-kv/src/domain/: config.rs  mod.rs  secret.rs
backend/covert-kv/src/store/: config.rs  secrets.rs
backend/covert-kv/tests/: config.rs  create.rs  delete_and_recover.rs
backend/covert-kv/tests/common/: mod.rs
backend/covert-psql/: Cargo.toml
backend/covert-psql/migrations/: 2022-12-27-init.sql
backend/covert-psql/src/: error.rs  lib.rs  path_config_connection.rs  path_role_create.rs  path_roles.rs  secret_creds.rs
backend/covert-psql/src/store/: connection.rs  mod.rs  role.rs
backend/covert-psql/tests/: creds.rs
backend/covert-psql/tests/common/: mod.rs
backend/covert-userpass-auth/: Cargo.toml
backend/covert-userpass-auth/migrations/: 2022-12-27-init.sql
backend/covert-userpass-auth/src/: error.rs  lib.rs
backend/covert-userpass-auth/src/store/: user.rs
backend/covert-userpass-auth/tests/: crud.rs
backend/covert-userpass-auth/tests/common/: mod.rs
covert-cli/: Cargo.toml
covert-cli/src/: auth.rs  entity.rs  kv.rs  lease.rs  main.rs  namespace.rs  operator.rs  policy.rs  psql.rs  secrets.rs  server.rs  status.rs  userpass.rs
covert-framework/: Cargo.toml
covert-framework/src/: handler.rs  lib.rs  method_router.rs  router.rs  sync_service.rs
covert-framework/src/extract/: extension.rs  json.rs  mod.rs  path.rs  query.rs
covert-sdk/: Cargo.toml
covert-sdk/src/: base.rs  entity.rs  kv.rs  lease.rs  lib.rs  mounts.rs  namespace.rs  operator.rs  policy.rs  psql.rs  status.rs  userpass.rs  utils.rs
covert-server/: Cargo.toml
covert-server/migrations/: 2022-12-29-init.sql  2023-01-11-audit.sql
covert-server/migrations/encrypted/: 2022-12-29-init.sql
covert-server/migrations/unecrypted/: 2023-02-17-init.sql  20230227_init.sql
covert-server/src/: config.rs  context.rs  core.rs  error.rs  expiration_manager.rs  lib.rs  migrations.rs  recovery.rs  response.rs  router.rs
covert-server/src/expiration_manager/: clock.rs  lease.rs  mod.rs
covert-server/src/helpers/: mod.rs  sqlite.rs  trie.rs
covert-server/src/layer/: auth_service.rs  core_extension.rs  lease_registration.rs  mod.rs  namespace_extension.rs  request_mapper.rs  storage_state_extension.rs
covert-server/src/repos/: entity.rs  lease.rs  mod.rs  mount.rs  namespace.rs  policy.rs  seal.rs  token.rs
covert-server/src/store/: identity_store.rs  lease_store.rs  mod.rs  mount_store.rs  policy_store.rs  token_store.rs
covert-server/src/system/: entity.rs  initialize.rs  lease.rs  mod.rs  mount.rs  namespace.rs  policy.rs  seal.rs  status.rs  token.rs  unseal.rs
covert-server/tests/: entity.rs  mod.rs  mount.rs  namespace.rs  policy.rs  replication.rs  seal.rs  status.rs
covert-server/tests/common/: mod.rs
covert-storage/: Cargo.toml
covert-storage/fixtures/scoped_sql/: alter_table.json  create_index.json  create_table.json  create_table_from_query.json  create_table_with_fk.json  create_table_with_fk_2.json  create_table_with_system_table_fk.json  create_table_with_system_table_fk_2.json  create_view.json  cte.json  drop_index.json  drop_table.json  drop_view.json  group_by_having.json  inner_join.json  insert_from_other_table.json  projection_in_select.json  projection_in_select_2.json  projection_in_select_3.json  select_from_subquqery.json  select_with_select_in_proj.json  select_with_select_in_proj_2.json  simple_delete.json  simple_insert.json  simple_select.json  simple_select_with_alias.json  simple_update.json  simple_update_2.json  table_in_where_clause.json  table_in_where_clause_select.json  union.json
covert-storage/src/: backend_pool.rs  encrypted_pool.rs  lib.rs  migrator.rs  scoped_queries.rs  states.rs  storage.rs
covert-storage/src/utils/: mod.rs  owned_rw_lock.rs
covert-types/: Cargo.toml
covert-types/src/: auth.rs  backend.rs  entity.rs  error.rs  lib.rs  mount.rs  policy.rs  psql.rs  request.rs  response.rs  state.rs  token.rs  ttl.rs
covert-types/src/methods/: mod.rs
covert-types/src/methods/kv/: mod.rs
covert-types/src/methods/psql/: mod.rs
covert-types/src/methods/system/: entity.rs  mod.rs  namespace.rs  policy.rs
covert-types/src/methods/userpass/: mod.rs
examples/: namespace.md  postgres-dynamic-credentials.md  static-key-value.md  userpass-auth-method.md
