[package]
name = "covert-framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
covert-types = { path = "../covert-types" }
covert-storage = { path = "../covert-storage" }
futures = { version = "0.3", default-features = false }
hyper = { version = "0.14", default-features = false }
matchit = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_qs = { version = "0.10", default-features = false }
tokio = { version = "1.23", features = ["sync"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-error = "0.1"