[package]
name = "covert-sdk"
description = "Covert SDK"
license = "MIT OR Apache-2.0"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
covert-types = { path = "../covert-types", version = "0.1.3" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }