[package]
name = "covert-system"
description = "Covert server"
license = "MIT OR Apache-2.0"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
aes-gcm = "0.10"
bytes = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
covert-framework = { path = "../covert-framework", version = "0.1.2" }
covert-storage = { path = "../covert-storage", version = "0.1.2" }
covert-types = { path = "../covert-types", version = "0.1.2" }
covert-kv = { path = "../backend/covert-kv", version = "0.1.2" }
covert-psql = { path = "../backend/covert-psql", version = "0.1.2" }
covert-userpass-auth = { path = "../backend/covert-userpass-auth", version = "0.1.2" }
futures = { version = "0.3", default-features = false }
hex = "0.4"
hmac = "0.12"
humantime-serde = "1.1"
http-body = "0.4"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
parking_lot = "0.12"
rand = "0.8"
regex = "1.6"
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
serde_with = "2.0"
sharks = "0.4"
sha2 = "0.10"
snailquote = "0.3"
strum = { version = "0.24", features = ["derive"] }
subtle = "2.4"
sqlx = { version = "0.6", features = ["chrono", "time", "runtime-tokio-native-tls"] }
thiserror = "1.0"
tokio = { version = "1.23", features = ["full", "test-util"] }
tower-http = { version = "0.3", features = ["fs", "limit", "cors"] }
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-error = "0.1"
tracing-subscriber = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]    
covert-sdk = { path = "../covert-sdk", version = "0.1.2" }
tempfile = "3.3"
