[package]
name = "covert-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
covert-types = { path = "../covert-types" }
futures = { version = "0.3", features = ["executor"] }
parking_lot = "0.12"
libsqlite3-sys = { version = "*", features = ["bundled-sqlcipher"] }
rand = "0.8"
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = { version = "0.10", default-features = false }
snailquote = "0.3"
sqlparser = "0.28"
sqlx = { version = "0.6", features = [ "sqlite", "migrate", "runtime-tokio-native-tls", "chrono", "time", ] }
tempfile = "3.3.0"
tokio = { version = "1.23", features = ["sync", "macros"] }
thiserror = "1.0"
tracing = "0.1"
tracing-error = "0.1"

[dev-dependencies]