[package]
name = "covert-psql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
covert-framework = { path = "../../covert-framework" }
covert-storage = { path = "../../covert-storage" }
covert-types = { path = "../../covert-types" }
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
thiserror = "1.0"
tokio = { version = "1.23", features = ["sync"] }
tracing = "0.1"
tracing-error = "0.1"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3.3"