[package]
name = "covert-userpass-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13"
covert-framework = { path = "../../covert-framework" }
covert-storage = { path = "../../covert-storage" }
covert-types = { path = "../../covert-types" }
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.6", features = ["chrono", "time", "runtime-tokio-native-tls"] }
thiserror = "1.0"
tracing = "0.1"
tracing-error = "0.1"

[dev-dependencies]
tempfile = "3.3"