[package]
name = "covert-userpass-auth"
description = "Covert userpass auth method"
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.13"
covert-framework = { path = "../../covert-framework", version = "0.1.1" }
covert-storage = { path = "../../covert-storage", version = "0.1.1" }
covert-types = { path = "../../covert-types", version = "0.1.1" }
rust-embed = "6.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
sqlx = { version = "0.6", features = ["chrono", "time", "runtime-tokio-native-tls"] }
thiserror = "1.0"
tracing = "0.1"
tracing-error = "0.1"

[dev-dependencies]
covert-system = { path = "../../covert-server", version = "0.1.1" }
covert-sdk = { path = "../../covert-sdk", version = "0.1.1" }
tokio = { version = "1.23", features = ["sync"] }